syntax = "proto3";

package pb;

option go_package = "../internal/pb/";

service UserService {
  rpc RegisterUser (RegisterRequest) returns (UserResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc GetUserProfile (UserIdRequest) returns (UserResponse);
  rpc UpdateUserProfile (UpdateRequest) returns (UpdateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message UserIdRequest {
  string user_id = 1;
}

message UpdateRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message AuthResponse {
  string token = 1;
}

message UpdateResponse {
  string id = 1;
  string message = 2;
}
